--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "nll": "^1.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
