--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
