--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "mongoose": "^8.0.3",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "nextjs-progressbar": "^0.0.16",
