--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
     "tailwind-merge": "^2.0.0"
   },
