--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
