--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "typescript": "^5",
